# band

./: Cargo.toml  DeviceCoordinator.java  HuaweiConstants.java  HuaweiCoordinator.java  HuaweiGpsParser.java
crates/huawei-band9/: Cargo.toml
crates/huawei-band9/src/: lib.rs
crates/huawei-band9/src/ble/: adapter.rs  device.rs  gatt.rs  mod.rs
crates/huawei-band9/src/capture/: logging.rs
crates/huawei-band9/src/huawei_band9/: auth.rs  bootstrap.rs  capabilities.rs  files.rs  fitness.rs  mod.rs  notifications.rs  ota.rs  session.rs  weather.rs  workouts.rs
crates/huawei-band9/src/protocol/: crypto.rs  frame.rs  mod.rs  pending.rs  router.rs  tlv.rs
crates/pixel-buds-a/: Cargo.toml
crates/pixel-buds-a/src/: lib.rs
crates/pixel-buds-a/src/maestro/: channel.rs  frame.rs  mod.rs  protobuf.rs  session.rs
crates/pixel-buds-a/src/maestro/channels/: ch10_settings.rs  ch11_status.rs  ch2_handshake.rs  ch3_control.rs  ch5_conn_state.rs  ch8_keepalive.rs  ch9_wear_touch.rs  mod.rs
crates/pixel-buds-a/src/rfcomm/: client.rs  mod.rs  reassembly.rs
deviceevents/: GBDeviceEventBatteryInfo.java
docs/: huawei-band9-cleanroom-protocol-template.md  huawei-band9-spec.md  huawei-packet-documentation.md  maestro.lua  pixel-buds-spec.md
model/: ActivityKind.java  ActivityPoint.java  ActivitySummaryEntries.java  ActivityTrack.java  DeviceType.java  GPSCoordinate.java
packets/: Workout.java
service/: DeviceCommunicationService.java
service/devices/huawei/: HuaweiFileDownloadManager.java  HuaweiSupportProvider.java  HuaweiSyncState.java  HuaweiWorkoutGbParser.java
service/devices/pixel/: maestro-decode.py  maestro.lua  maestro.md  timeline-2.txt
(+5 files in other folders)
