[workspace]
members = [
  "crates/huawei-band9",
  "crates/pixel-buds-a",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
rust-version = "1.78"

[workspace.dependencies]
aes = "0.8"
aes-gcm = "0.10"
anyhow = "1"
bluer = { version = "0.17", features = ["bluetoothd"] }
bytes = "1"
cbc = "0.1"
crc = "3"
futures = "0.3"
hkdf = "0.12"
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = "1"
