[package]
name = "huawei-band9"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aes.workspace = true
aes-gcm.workspace = true
anyhow.workspace = true
bluer.workspace = true
bytes.workspace = true
cbc.workspace = true
crc.workspace = true
futures.workspace = true
hkdf.workspace = true
hmac.workspace = true
pbkdf2.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
